[Feature] - application primary, secondary, tertiary colours as well as basic elements for DashboardBalance component

--- a/apps/client/src/features/dashboard/components/DashboardBalance/DashboardBalance.module.scss
+++ b/apps/client/src/features/dashboard/components/DashboardBalance/DashboardBalance.module.scss
@@ -1,3 +1,22 @@
-.test {
+.dashboard-balance {
     background-color: blue;
+
+    .balance {
+
+        .balance-amount {
+
+        }
+
+        .balance-return {
+
+        }
+    }
+
+    .balance-buttons {
+
+    }
+}
+
+.cta-button {
+    
 }
