--- a/apps/client/src/styles/_variables.scss
+++ b/apps/client/src/styles/_variables.scss
@@ -2,3 +2,25 @@ $profit-color: #22c55e;
 $loss-color: #ef4444;
 $bg-dark: #0f172a;
 $text-main: #f8fafc;
+
+// COLOUR THEME
+// Buttons, CTAs, Highlights
+$primary-light-2: #fca5a5;
+$primary-light-1: #ef4444;
+$primary: #b91c1c;
+$primary-dark-1: #7b0909;
+$primary-dark-2: #4a0404;
+
+// Bulk of UI, backgrounds, cards, sidebars etc
+$secondary-light-2: #94a3b8;
+$secondary-light-1: #64748b;
+$secondary: #334155;
+$secondary-dark-1: #1e293b;
+$secondary-dark-2: #0f172a;
+
+// High contrast, warnings, accent colour
+$tertiary-light-2: #fcd34d;
+$tertiary-light-1: #f59e0b;
+$tertiary: #d97706;
+$tertiary-dark-1: #92400e;
+$tertiary-dark-2: #78350f;
