--- a/apps/client/src/styles/_variables.scss
+++ b/apps/client/src/styles/_variables.scss
@@ -3,6 +3,9 @@ $loss-color: #ef4444;
 $bg-dark: #0f172a;
 $text-main: #f8fafc;
 
+$black: #000000;
+$white: #ffffff;
+
 // COLOUR THEME
 // Buttons, CTAs, Highlights
 $primary-light-2: #fca5a5;
