[Fix] - changed app primary colour from red to blue

--- a/apps/client/src/styles/_variables.scss
+++ b/apps/client/src/styles/_variables.scss
@@ -8,11 +8,11 @@ $white: #ffffff;
 
 // COLOUR THEME
 // Buttons, CTAs, Highlights
-$primary-light-2: #fca5a5;
-$primary-light-1: #ef4444;
-$primary: #b91c1c;
-$primary-dark-1: #7b0909;
-$primary-dark-2: #4a0404;
+$primary-light-2: #d3e7fe;
+$primary-light-1: #53a3fd;
+$primary: #0376f9;
+$primary-dark-1: #0059c0;
+$primary-dark-2: #003a7c;
 
 // Bulk of UI, backgrounds, cards, sidebars etc
 $secondary-light-2: #94a3b8;
