--- a/apps/client/src/features/dashboard/components/DashboardBalance/DashboardBalance.module.scss
+++ b/apps/client/src/features/dashboard/components/DashboardBalance/DashboardBalance.module.scss
@@ -1,16 +1,27 @@
+@use "../../../../styles/variables" as variables;
+
 .dashboard-balance {
-    .balance {
+  padding: 1rem;
+  border-radius: 2.5rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: min-content;
+  grid-auto-flow: row;
+  row-gap: 1rem;
+  background-color: variables.$secondary-dark-1;
+  color: variables.$white;
 
-        .balance-amount {
-
-        }
-
-        .balance-return {
-
-        }
+  .balance {
+    .balance-amount {
     }
 
-    .balance-buttons {
-
+    .balance-return {
     }
+  }
+
+  .balance-buttons {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2rem;
+  }
 }
