[Feature] - added loss / gain styling to dashboard balance amount element

--- a/apps/client/src/features/dashboard/components/DashboardBalance/DashboardBalance.module.scss
+++ b/apps/client/src/features/dashboard/components/DashboardBalance/DashboardBalance.module.scss
@@ -12,10 +12,11 @@
   color: variables.$white;
 
   .balance {
-    .balance-amount {
+    & .positive {
+      color: variables.$profit-color;
     }
-
-    .balance-return {
+    & .negative {
+      color: variables.$loss-color;
     }
   }
 
