--- a/apps/client/src/features/dashboard/components/Dashboard/Dashboard.module.scss
+++ b/apps/client/src/features/dashboard/components/Dashboard/Dashboard.module.scss
@@ -11,4 +11,9 @@
     grid-column: 1 / 2;
     grid-row: 1 / 2;
   }
+
+  .dashboard-market-balance {
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
+  }
 }
