--- a/apps/client/src/features/dashboard/components/DashboardBalance/DashboardBalance.module.scss
+++ b/apps/client/src/features/dashboard/components/DashboardBalance/DashboardBalance.module.scss
@@ -1,15 +1,13 @@
 @use "../../../../styles/variables" as variables;
 
 .dashboard-balance {
-  // padding: 1rem;
-  // border-radius: 2.5rem;
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-rows: min-content;
   grid-auto-flow: row;
   row-gap: 1rem;
-  // background-color: variables.$secondary-dark-1;
-  // color: variables.$white;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
 
   .balance {
     & .positive {
