--- a/apps/client/src/components/MarketIndicator/MarketIndicator.module.scss
+++ b/apps/client/src/components/MarketIndicator/MarketIndicator.module.scss
@@ -1,5 +1,19 @@
+@use "../../styles/variables" as variables;
+
 .indicator {
+  background-color: variables.$secondary;
+  padding: 1rem 1.5rem;
+  border-radius: 1.5rem;
+  width: max-content;
+  display: grid;
+  grid-template-rows: repeat(2, min-content);
+  row-gap: 5rem;
+
   .indicator-heading {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    column-gap: 1rem;
+
     .indicator-symbol {
     }
 
@@ -8,8 +22,14 @@
   }
 
   .indicator-value {
+    display: grid;
+    grid-template-rows: repeat(2, min-content);
+    row-gap: 0.5rem;
+
     .indicator-price {
+      font-weight: 700;
     }
+
     .indicator-change {
     }
   }
