--- a/apps/client/src/features/dashboard/components/DashboardBalance/DashboardBalance.module.scss
+++ b/apps/client/src/features/dashboard/components/DashboardBalance/DashboardBalance.module.scss
@@ -1,11 +1,9 @@
 @use "../../../../styles/variables" as variables;
 
 .dashboard-balance {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: min-content;
-  grid-auto-flow: row;
-  row-gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   grid-column: 1 / 2;
   grid-row: 1 / 2;
 
