--- a/apps/client/src/components/MarketIndicator/MarketIndicator.module.scss
+++ b/apps/client/src/components/MarketIndicator/MarketIndicator.module.scss
@@ -4,7 +4,8 @@
   background-color: variables.$secondary;
   padding: 1rem 1.5rem;
   border-radius: 1.5rem;
-  width: max-content;
+  width: 100%;
+  min-width: max-content;
   display: grid;
   grid-template-rows: repeat(2, min-content);
   row-gap: 3rem;
@@ -19,6 +20,13 @@
     }
 
     .indicator-change {
+      &.positive {
+        color: variables.$profit-color;
+      }
+
+      &.negative {
+        color: variables.$loss-color;
+      }
     }
   }
 }
