--- a/apps/client/src/features/dashboard/components/DashboardMarketOverview/DashboardMarketOverview.module.scss
+++ b/apps/client/src/features/dashboard/components/DashboardMarketOverview/DashboardMarketOverview.module.scss
@@ -12,11 +12,12 @@
 
   .market-indicator-list {
     display: grid;
-    grid-auto-columns: max-content;
+    grid-auto-columns: minmax(min-content, 1fr);
     grid-auto-flow: column;
     column-gap: 2rem;
     overflow-x: scroll;
     @include mixins.app-scrollbar;
     padding-bottom: 1rem;
+    width: 100%;
   }
 }
