--- a/apps/client/src/features/dashboard/components/DashboardWatchList/DashboardWatchList.module.scss
+++ b/apps/client/src/features/dashboard/components/DashboardWatchList/DashboardWatchList.module.scss
@@ -1,4 +1,19 @@
+@use "../../../../styles/mixins" as mixin;
+
 .dashboard-watchlist {
   grid-column: 3 / 4;
   grid-row: 3 / 4;
+  height: 30rem;
+  overflow-y: hidden;
+
+  .stock-list {
+    display: grid;
+    grid-auto-rows: min-content;
+    grid-auto-flow: row;
+    row-gap: 0.25rem;
+    @include mixin.app-scrollbar;
+    overflow-y: scroll;
+    height: 21.5rem;
+    margin-top: 2rem;
+  }
 }
