--- a/apps/client/src/features/dashboard/components/DashboardWatchList/DashboardWatchList.module.scss
+++ b/apps/client/src/features/dashboard/components/DashboardWatchList/DashboardWatchList.module.scss
@@ -3,8 +3,18 @@
 .dashboard-watchlist {
   grid-column: 3 / 4;
   grid-row: 3 / 4;
-  height: 30rem;
+  height: 35rem;
   overflow-y: hidden;
+  display: grid;
+  grid-template-rows: repeat(2, min-content);
+  row-gap: 2rem;
+
+  .list-filters {
+    display: grid;
+    grid-auto-columns: 1fr;
+    grid-auto-flow: column;
+    column-gap: 1rem;
+  }
 
   .stock-list {
     display: grid;
@@ -14,6 +24,5 @@
     @include mixin.app-scrollbar;
     overflow-y: scroll;
     height: 21.5rem;
-    margin-top: 2rem;
   }
 }
