--- a/apps/client/src/features/dashboard/components/DashboardPortfolioOverview/DashboardPortfolioOverview.module.scss
+++ b/apps/client/src/features/dashboard/components/DashboardPortfolioOverview/DashboardPortfolioOverview.module.scss
@@ -1,4 +1,14 @@
 .dashboard-portfolio-overview {
   grid-column: 1 / 3;
   grid-row: 3 / 4;
+
+  .portfolio-overview-heading {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+  }
+
+  .stock-list {
+  }
 }
