--- a/apps/client/src/components/ListSorters/ListSorters.module.scss
+++ b/apps/client/src/components/ListSorters/ListSorters.module.scss
@@ -1,14 +1,10 @@
-@use "../../styles/variables" as variables;
-
-.stock-item {
+.sorters {
   display: grid;
   grid-auto-columns: 1fr;
   grid-auto-flow: column;
   column-gap: auto;
-  padding: 0.5rem 0rem;
-  align-items: center;
 
-  .stock-info {
+  .sorter {
     display: flex;
     flex-direction: column;
     align-items: center;
