--- a/apps/client/src/components/ListSorters/ListSorters.module.scss
+++ b/apps/client/src/components/ListSorters/ListSorters.module.scss
@@ -1,12 +1,17 @@
+@use "../../styles/variables" as variables;
+
 .sorters {
   display: grid;
   grid-auto-columns: 1fr;
   grid-auto-flow: column;
-  column-gap: auto;
+  column-gap: 0.2rem;
+  margin-bottom: 0.2rem;
 
   .sorter {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: variables.$secondary-dark-2;
+    padding: 0.5rem 0rem;
   }
 }
