--- a/apps/client/src/features/dashboard/components/DashboardPortfolioOverview/DashboardPortfolioOverview.module.scss
+++ b/apps/client/src/features/dashboard/components/DashboardPortfolioOverview/DashboardPortfolioOverview.module.scss
@@ -1,6 +1,10 @@
+@use "../../../../styles/mixins" as mixins;
+
 .dashboard-portfolio-overview {
   grid-column: 1 / 3;
   grid-row: 3 / 4;
+  height: 35rem;
+  overflow-y: hidden;
 
   .portfolio-overview-heading {
     display: flex;
@@ -10,5 +14,8 @@
   }
 
   .stock-list {
+    height: 25rem;
+    overflow-y: scroll;
+    @include mixins.app-scrollbar;
   }
 }
