--- a/apps/client/src/features/dashboard/components/DashboardPortfolioOverview/DashboardPortfolioOverview.module.scss
+++ b/apps/client/src/features/dashboard/components/DashboardPortfolioOverview/DashboardPortfolioOverview.module.scss
@@ -14,6 +14,10 @@
   }
 
   .stock-list {
+    display: grid;
+    grid-auto-rows: min-content;
+    grid-auto-flow: row;
+    row-gap: 0.25rem;
     height: 25rem;
     overflow-y: scroll;
     @include mixins.app-scrollbar;
