--- a/apps/client/src/features/dashboard/components/DashboardMarketOverview/DashboardMarketOverview.module.scss
+++ b/apps/client/src/features/dashboard/components/DashboardMarketOverview/DashboardMarketOverview.module.scss
@@ -12,7 +12,7 @@
 
   .market-indicator-list {
     display: grid;
-    grid-auto-columns: minmax(min-content, 1fr);
+    grid-auto-columns: 12.5rem;
     grid-auto-flow: column;
     column-gap: 2rem;
     overflow-x: scroll;
