[Feature] - navigation hides and reveals when menu button clicked

--- a/apps/client/src/features/navigation/components/SideNavigation/SideNavigation.module.scss
+++ b/apps/client/src/features/navigation/components/SideNavigation/SideNavigation.module.scss
@@ -11,6 +11,13 @@
 
     .navigation-item {
       padding: 1rem;
+      transition: all 0.3s;
+
+      &.hide {
+        padding: 1rem 0rem;
+        width: 0;
+        overflow: hidden;
+      }
     }
   }
 }
