--- a/apps/client/src/features/navigation/components/SideNavigation/SideNavigation.module.scss
+++ b/apps/client/src/features/navigation/components/SideNavigation/SideNavigation.module.scss
@@ -2,6 +2,15 @@
 
 .side-navigation {
   background-color: variables.$secondary-dark-2;
+  padding: 2rem 1rem;
+  display: grid;
+  grid-template-rows: repeat(2, min-content);
+  row-gap: 2rem;
+
+  .navigation-button {
+    display: flex;
+    justify-content: center;
+  }
 
   .navigation-items {
     display: grid;
