--- a/apps/client/src/features/navigation/components/SideNavigation/SideNavigation.module.scss
+++ b/apps/client/src/features/navigation/components/SideNavigation/SideNavigation.module.scss
@@ -2,10 +2,11 @@
 
 .side-navigation {
   background-color: variables.$secondary-dark-2;
-  padding: 2rem 1rem;
+  padding: 2rem;
   display: grid;
   grid-template-rows: repeat(2, min-content);
   row-gap: 2rem;
+  border-right: 0.5rem solid variables.$secondary-dark-1;
 
   .navigation-button {
     display: flex;
