[Feature] - added an active link class to the side navigation

--- a/apps/client/src/features/navigation/components/SideNavigation/SideNavigation.module.scss
+++ b/apps/client/src/features/navigation/components/SideNavigation/SideNavigation.module.scss
@@ -23,11 +23,16 @@
     .navigation-item {
       padding: 1rem;
       transition: all 0.3s;
+      text-decoration: none;
 
       &.hide {
         padding: 1rem 0rem;
         width: 0;
         overflow: hidden;
+      }
+
+      &.active {
+        background-color: variables.$primary-dark-2;
       }
     }
   }
