--- a/apps/client/src/features/navigation/components/SideNavigation/SideNavigation.module.scss
+++ b/apps/client/src/features/navigation/components/SideNavigation/SideNavigation.module.scss
@@ -7,7 +7,7 @@
   grid-template-rows: repeat(2, min-content);
   row-gap: 2rem;
   border-right: 0.5rem solid variables.$secondary-dark-1;
-  height: 100vh;
+  height: 100%;
 
   .navigation-button {
     display: flex;
