[Feature] - put in no search, loading search, loading error and error handlers and uis

--- a/apps/client/src/features/search/components/AssetSearcher/AssetSearcher.module.scss
+++ b/apps/client/src/features/search/components/AssetSearcher/AssetSearcher.module.scss
@@ -14,3 +14,10 @@
     }
   }
 }
+
+.no-search-results,
+.loading-search-results {
+  color: variables.$white;
+  text-align: center;
+  padding: 1rem;
+}
