--- a/apps/client/src/index.scss
+++ b/apps/client/src/index.scss
@@ -62,3 +62,12 @@ input {
   color: variables.$white;
   animation: flashWhite 1s ease-out;
 }
+
+.loading-api-error,
+.api-error {
+  color: variables.$loss-color;
+  text-align: center;
+  padding: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
