[Feature] - details markup and basic styling

--- a/apps/client/src/styles/_typography.scss
+++ b/apps/client/src/styles/_typography.scss
@@ -4,3 +4,7 @@ $text-heading-4: 2.4rem;
 $text-heading-3: 3.2rem;
 $text-heading-2: 4rem;
 $text-heading-1: 4.8rem;
+
+.thin {
+  font-weight: 100;
+}
