--- a/apps/client/src/features/asset-profile/components/AssetDetails/AssetDetails.module.scss
+++ b/apps/client/src/features/asset-profile/components/AssetDetails/AssetDetails.module.scss
@@ -1,4 +1,28 @@
 .asset-details {
   grid-row: 3 / 4;
-  grid-column: 1 / 2;
+  grid-column: 1 / 3;
+  display: grid;
+  grid-auto-rows: min-content;
+  grid-auto-flow: row;
+  row-gap: 1rem;
+
+  .asset-overview {
+    display: grid;
+    grid-auto-rows: min-content;
+    grid-auto-flow: row;
+    row-gap: 1rem;
+  }
+
+  .details {
+    display: grid;
+    grid-auto-rows: min-content;
+    grid-auto-flow: row;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem;
+
+    .detail {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+    }
+  }
 }
