--- a/apps/client/src/index.scss
+++ b/apps/client/src/index.scss
@@ -1,13 +1,14 @@
 @use "./styles/variables.scss" as variables;
 @use "./styles/animations.scss" as animations;
 @import "./styles/_typography.scss";
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 *,
 body,
 html {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: Inter, sans-serif;
   box-sizing: border-box;
 }
 
